# devilishdash

./: .gitignore  Makefile  README.md  _quarto.yml  about.qmd  custom.scss  index.qmd  pyproject.toml  styles.css
.github/workflows/: deploy.yml
data/: schema.md  warehouse.duckdb
data/ingest/: __init__.py  build_marts.py  moneypuck_shots.py  nhl_schedule.py  run_all.py
devilishdash/: __init__.py  data.py  stats.py  viz.py
docs/: phase-0-completion.md
docs/superpowers/plans/: 2026-05-07-phase-0-foundation.md  2026-05-19-phase-1-injury-recovery.md
docs/superpowers/research/: 2026-05-19-phase-1-injury-data-scouting.md
docs/superpowers/specs/: 2026-05-07-hockey-analytics-portfolio-design.md
notes/: 2026-05-09-warehouse-stack.qmd  _metadata.yml  index.qmd
projects/: index.qmd
tests/: conftest.py  test_build_marts.py  test_data.py  test_ingest_moneypuck.py  test_ingest_nhl.py  test_smoke.py  test_stats.py  test_viz.py
