[project]
name = "devilishdash"
version = "0.1.0"
description = "Hockey analytics utility package and portfolio site"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "pandas>=2.2",
    "requests>=2.32",
    "nhl-api-py>=2.0",
    "matplotlib>=3.9",
    "plotnine>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["devilishdash*"]
exclude = ["tests*", "data*", "docs*", "notes*", "projects*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
